# Seengine

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  main.c
include/: stddefinitions.h  stdincludes.h  stdutils.h
include/seengine/: engine.POSIX.h  engine.WIN32.h  engine.h  sedefines.h  see.h  seedefines.h  seeutils.h
include/seengine/types/: sechar.h  seechar.h
include/service/: service.POSIX.h  service.WIN32.h  service.h
src/: stdutils.c
src/seengine/: Seengine  engine.POSIX.entry.c  engine.POSIX.main.c  engine.WIN32.entry.c  engine.WIN32.main.c  engine.c
src/service/: service.POSIX.entry.c  service.POSIX.main.c  service.POSIX.workerthreadroutine.c  service.WIN32.control.c  service.WIN32.entry.c  service.WIN32.main.c  service.WIN32.report.c  service.c
